tests/positive/MiniC/AxiomNoCompile/Input.juvix
module Input;

open import Stdlib.Prelude;

inductive Unit {
  unit : Unit;
};

axiom ignore : Unit -> Unit;

main : IO;
main := putStrLn "Hello";

end;
