tests/negative/MicroJuvix/Positivity/E2.juvix
module E2;

open import NegParam;

inductive D {
d : T D -> D;
};

end;
